deploy/k8s/consul-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: consul-server
  labels:
    name: consul-server
spec:
  selector:
    name: consul-server
  ports:
    - name: http
      port: 8500
      targetPort: 8500
    - name: https
      port: 8443
      targetPort: 8443
    - name: rpc
      port: 8400
      targetPort: 8400
