deploy/k8s/go-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-app-svc
  labels:
    app: go-app
spec:
  selector:
    app: go-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
