deploy/k8s/go-ingress.yaml
# Ingress Class
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: go-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: api.go-app.org
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: go-app-svc
                port: 
                  number: 80
  tls:
  - hosts:
    - api.go-app.org
    secretName: go-app-cert
